# PewCraft

./: Cargo.toml
backend/: Cargo.toml
backend/data/maps/: plain_pillars.json
backend/src/: game_definition_loader.rs  main.rs
common/: Cargo.toml
common/src/game/: character.rs  game_state.rs  id_map.rs
common/src/io/: mod.rs
frontend/: Cargo.toml
frontend/src/: api.rs  main.rs  state.rs
frontend/src/tui/: map.rs  render.rs  tui.rs
frontend/src/tui_impl/: input.rs  map.rs  mod.rs  render.rs  tui.rs
