[package]
name = "backend"
version = "0.1.0"
authors = ["Paul Lesur <git@lesurpaul.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
lazy_static = "1.4"
log = "0.4"
common = { path = "../common" }
rand = "0.8"
rocket = "0.4"
rocket_contrib = "0.4"
serde = "1.0"
serde_json = "1.0"
